@@ -955,6 +955,9 @@ gline_lookup(struct Client *cptr, unsigned int flags)
        Debug((DEBUG_DEBUG,"realname gline: '%s' '%s'",gline->gl_user,cli_info(cptr)));
       if (match(gline->gl_user+2, cli_info(cptr)) != 0)
 	continue;
+ 
+      if (!GlineIsActive(gline))
+        continue;
 
       return gline;
     }
@@ -982,7 +985,8 @@ gline_lookup(struct Client *cptr, unsigned int flags)
 #endif
       }
     }
-    return gline;
+    if (GlineIsActive(gline))
+      return gline;
   }
   /*
    * No Glines matched
